immich/allow-cloudflared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-ingress
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: clouadfare
    ports:
    - port: 2283
      protocol: TCP
    - port: 80
      protocol: TCP
